--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "mongoose": "^5.8.11",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
+    "prop-types": "^15.7.2",
     "query-string": "^6.10.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.12.0",
+    "react-flip-move": "^3.0.4",
     "react-loader-spinner": "^4.0.0",
     "react-phone-input-2": "^2.14.0",
     "react-redux": "^7.1.3",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-toastify": "^7.0.4",
