e2e made, friend suggestion made

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "sharp": "^0.28.1",
     "socket.io": "^4.0.1",
     "socket.io-client": "^4.0.1",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "validator": "^12.2.0",
     "yup": "^0.32.9"
   },
